feat(admin): implementar cambio de roles en backend y buscador reactivo junto con ADR-15
- Backend: Creado endpoint PATCH para actualización de roles por administrador.
- Security: Optimizado filtro JWT a Stateless puro eliminando dobles consultas a PostgreSQL.
- Security: Añadido soporte para verbo PATCH en CORS y mapeo de rutas administrativas.
- Frontend: Conectado selector interactivo en AdminDashboard con actualización de badges en tiempo real.
- Docs: Registrada la decisión arquitectónica en adr.md bajo el código ADR-15.