@@ -1,7 +1,6 @@
 package com.cursosonline.backend.config;
 
 import com.cursosonline.backend.security.jwt.JwtAuthenticationFilter;
-import com.cursosonline.backend.security.jwt.JwtService;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -10,13 +9,10 @@ import org.springframework.security.config.annotation.authentication.configurati
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.web.context.HttpSessionSecurityContextRepository;
-import org.springframework.security.web.context.SecurityContextRepository;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -25,76 +21,74 @@ import java.util.Arrays;
 import java.util.List;
 
 /**
- * Clase de configuración de seguridad para la aplicación. Define las reglas de
- * acceso
- * a las diferentes rutas de la API según los roles de usuario (ADMIN,
- * PROFESSOR, STUDENT).
- * Configura la convivencia entre el modelo de sesiones HTTP tradicional y los
- * tokens JWT.
+ * Clase de configuración de seguridad optimizada para la aplicación.
+ * Implementa un modelo puro Stateless basado al 100% en tokens JWT,
+ * eliminando duplicidades y residuos del sistema de sesiones HTTP.
  */
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    private final JwtService jwtService;
-    private final UserDetailsService userDetailsService;
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    // Inyección de dependencias por constructor requerida para el filtro JWT
-    public SecurityConfig(JwtService jwtService, UserDetailsService userDetailsService) {
-        this.jwtService = jwtService;
-        this.userDetailsService = userDetailsService;
+    // Inyección limpia del filtro administrado por Spring como componente
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter) {
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
     }
 
     /**
-     * Configura la cadena de seguridad HTTP, incorporando el filtro de intercepción
-     * JWT
-     * de forma no intrusiva antes de los mecanismos tradicionales de Spring
-     * Security.
+     * Configura la cadena de seguridad HTTP en modo estricto STATELESS.
      */
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        // Instanciamos el filtro pasándole los servicios inyectados
-        JwtAuthenticationFilter jwtFilter = new JwtAuthenticationFilter(jwtService, userDetailsService);
-
         http
-                // Integrar CORS en la cadena de seguridad
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(csrf -> csrf.disable()) // Deshabilitado para facilitar el desarrollo con APIs REST
-                // Cambiamos de IF_REQUIRED a STATELESS: El servidor ya no guarda estados de
-                // sesión
+                .csrf(csrf -> csrf.disable()) // Deshabilitado para APIs REST Stateless
+
+                // SEGURIDAD PURA JWT: El servidor ya no guarda estados de sesión bajo ningún
+                // concepto
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                        .requestMatchers("/api/auth/login", "/api/auth/register").permitAll()
+                        // Endpoints públicos de autenticación y búsqueda base de usuarios
+                        .requestMatchers("/api/auth/login", "/api/auth/register", "/api/auth/{username}").permitAll()
+
                         // Endpoint para obtener información del usuario autenticado
                         .requestMatchers("/api/auth/me").authenticated()
-                        // Rutas protegidas según roles
+
+                        // EXCLUSIVO ADMINISTRADOR: Asegura el endpoint de cambio de rol
+                        // /api/auth/users/**
+                        .requestMatchers("/api/auth/users/**").hasAuthority("ADMIN")
                         .requestMatchers("/api/admin/**").hasAuthority("ADMIN")
                         .requestMatchers("/api/users/**").hasAuthority("ADMIN")
+
                         // Rutas protegidas para profesores y administradores
                         .requestMatchers("/api/professor/**").hasAnyAuthority("PROFESSOR", "ADMIN")
                         // Rutas protegidas para estudiantes y administradores
                         .requestMatchers("/api/student/**").hasAnyAuthority("STUDENT", "ADMIN")
+
                         // Cualquier otra solicitud requiere autenticación
                         .anyRequest().authenticated())
                 .formLogin(form -> form.disable())
                 .httpBasic(basic -> basic.disable());
 
-        // CONVIVENCIA: Registramos el filtro JWT antes del filtro de credenciales
-        // estándar
-        http.addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+        // Registramos el filtro JWT limpio antes del filtro de credenciales estándar
+        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
     /**
-     * Configura CORS para permitir solicitudes desde el frontend (React/Vite).
+     * Configura CORS permitiendo solicitudes asíncronas completas desde React.
      */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:5173")); // Origen del frontend (React/Vite)
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedOrigins(List.of("http://localhost:5173"));
+
+        // Agregado "PATCH" para permitir los cambios parciales de rol desde el frontend
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
 
@@ -114,10 +108,5 @@ public class SecurityConfig {
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
         return configuration.getAuthenticationManager();
-    }
-
-    @Bean
-    public SecurityContextRepository securityContextRepository() {
-        return new HttpSessionSecurityContextRepository();
     }
 }
